# jetfire

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE.txt  README.md  SCALING.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/api/: jobs.py
app/core/: celery.py  config.py  logging.py
app/db/: session.py
app/db/models/: __init__.py  job.py  summary.py  transaction.py
app/repositories/: job_repository.py  summary_repository.py  transaction_repository.py
app/schemas/: job.py  result.py  summary.py  transaction.py
app/services/: anomaly_detector.py  csv_cleaner.py  llm_service.py  summary_service.py  transaction_service.py
app/utils/: s3.py
app/workers/: tasks.py
tests/: test_anomaly_detector.py  test_cleaning.py
