[project]
name = "jetfire"
version = "0.1.0"
description = "Transaction anomaly detection and classification service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "pandas>=2.2.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "isort>=5.13.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.isort]
profile = "black"
line_length = 100
